--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="luna-x" /> -->
   <!-- ? Font ? -->
-  <link href="//db.onlinewebfonts.com/c/67680f2eb947c5cbd58b40961b4a61e9?family=Apple+SD+Gothic+Neo" rel="stylesheet" type="text/css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-applesdgothicneo@1.0.3/css/all.min.css">
+
 
   <!-- ? Web Analytics -->
   <!-- <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "715efe574d1b4ab9a02cbf36c88f7fd3"}'></script> -->
